# MotionCore

./: .gitignore  CMakeLists.txt  README.md
cmake/: MotionCoreConfig.cmake.in  install.sh.in
config/: wxz_config.yaml  wxz_config.yaml.sample
docs/: 00_架构与开发目的.md  README.md  并发稳定性压测.md  核心库落地快速开始.md  框架层约定与用法.md  迁移说明.md
docs/dto/: DTO规范-对外团队简版.md  DTO规范示例.md  README.md
docs/plan/: 核心架构-优化方案(To-Be).md
dto/: EventDTO.idl  HeartbeatDTO.idl
dto/baseline/: EventDTO.idl  HeartbeatDTO.idl
include/: byte_buffer_pool.h  capability_status.h  clock.h  comm.h  command_router.h  core_api.h  device.h  executor.h  fastdds_channel.h  fault_action.h  fault_recovery_executor.h  fault_status.h  inproc_channel.h  kv_codec.h  logger.h  metrics_http_server.h  metrics_prometheus.h  motion_planner.h  move_only_function.h  node_base.h  node_runtime.h  observability.h  param_server.h  service_common.h  shm_channel.h  strand.h  subscription.h  time_sync.h  topics.h
include/communication/: communication.h
include/dto/: dto_core.h  event_dto.h  event_dto_cdr.h  event_dto_idl_version.h  event_dto_sample.h  heartbeat_dto.h  heartbeat_dto_cdr.h  heartbeat_dto_idl_version.h  image2d_dto.h  pose3d_dto.h  simple_pose_dto.h
include/framework/: lifecycle.h  node.h  parameter.h  qos.h  service.h  service_client.h  spin.h  status.h  time.h  timer.h  typed_rpc.h
include/internal/: fastcdr_compat.h
include/rpc/: json_rpc.h  rpc_client.h  rpc_common.h  rpc_service.h
resources/: fastdds_peers_example.xml  fastdds_profiles_minimal.xml  fastdds_profiles_participant_select.xml  fastdds_profiles_release.xml
src/: byte_buffer_pool.cpp  channel_factory.cpp  channel_registry.cpp  clock.cpp  communication.cpp  config.cpp  config_fetcher.cpp  dds_security_precheck.cpp  discovery.cpp  dto_core.cpp  event_dispatcher.cpp  event_dto_cdr.cpp  event_dto_sample.cpp  event_dto_utils.cpp  event_queue.cpp  fastdds_channel.cpp  fastdds_participant_factory.cpp  fault_recovery_executor.cpp  heartbeat_dto_cdr.cpp  image2d_dto.cpp  inproc_channel.cpp  logger.cpp  metrics_http_server.cpp  metrics_prometheus.cpp  observability.cpp  param_server.cpp  param_server_distributed.cpp  param_server_public.cpp  param_store.cpp  pose3d_dto.cpp  rpc_client.cpp  rpc_service.cpp  shm_channel.cpp  simple_pose_dto.cpp  thread_pool.cpp  time_sync.cpp  wxz_worker_group.cpp
src/internal/include/internal/: channel_factory.h  channel_registry.h  config.h  config_fetcher.h  dds_security_precheck.h  discovery.h  event_dispatcher.h  event_queue.h  fastdds_participant_factory.h  legacy_communicator.h  lifecycle.h  logger.h  param_server.h  param_store.h  thread_pool.h  threading_config.h  wxz_worker_group.h
